[tool.poetry]
name = "rmwatchlater"
version = "0.1.0"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyautogui = "^0.9.54"
mylocale = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
