[tool.poetry]
name = "rmwatchlater"
version = "2025.1.15"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyautogui = "^0.9.54"
mylocale = "^2025.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rmwatchlater = 'rmwatchlater.__init__:main'
